--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource Setting
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
